--- a/src/_locales/sk_SK/messages.json
+++ b/src/_locales/sk_SK/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Customizable mouse gesture add-on, which supports over 60 different commands and additional features like rocker and wheel gestures.",
+    "message": "S týmto rozšírením môžete prispôsobovať gestá myši. Je podporovaných viac ako 60 rôznych príkazov a ďalšie funkcie ako gestá kolieskom myši a rocker gestá.",
     "description": "Customizable mouse gesture add-on, which supports over 60 different commands and additional features like rocker and wheel gestures."
   },
   "addonUpdateNotificationTitle": {
@@ -224,7 +224,7 @@
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
   "settingDescriptionCommandFontSize": {
-    "message": "Accepts every CSS Unit like: em, px, pt, %, vh etc.",
+    "message": "Povolené sú všetky CSS jednotky ako napríklad: em, px, pt, %, vh atď.",
     "description": "Accepts every CSS Unit like: em, px, pt, %, vh etc."
   },
   "settingDescriptionDisplayDirections": {
@@ -232,7 +232,7 @@
     "description": "Displays the encoding of the gesture as arrows at the bottom of the screen."
   },
   "settingDescriptionDirectionsFontSize": {
-    "message": "Accepts every CSS Unit like: em, px, pt, %, vh etc.",
+    "message": "Povolené sú všetky CSS jednotky ako napríklad: em, px, pt, %, vh atď.",
     "description": "Accepts every CSS Unit like: em, px, pt, %, vh etc."
   },
   "settingDescriptionDirectionsBackgroundOpacity": {
@@ -248,7 +248,7 @@
     "description": "Information:"
   },
   "gestureTextInformation": {
-    "message": "Gesto je postupné v týchto smeroch: ↑ [up], ↓ [down], → [right], ← [left] a nemôže obsahovať rovnaký smer dvakrát za sebou, ako napríklad ↑↑. Rovnaké gesto nemôže byť priradené viac ako jednému príkazu.",
+    "message": "Gesto je možné zadať v týchto smeroch: ↑ [hore], ↓ [dole], → [vpravo], ← [vľavo] a nemôže obsahovať rovnaký smer dvakrát za sebou, ako napríklad ↑↑. Rovnaké gesto nemôže byť priradené viac ako jednému príkazu.",
     "description": "A gesture is a sequence of the following directions: ↑ [up], ↓ [down], → [right], ← [left] and cannot contain the same direction twice in a row, as for example ↑↑. The same gesture can not be assigned to more than one command."
   },
   "extraLabelRockerActive": {
@@ -264,7 +264,7 @@
     "description": "Left mouse click"
   },
   "extraDescriptionRockerActive": {
-    "message": "Gesto sa vykoná buď podržaním pravého tlačidla myši a stlačením ľavého alebo naopak.",
+    "message": "Gesto vykonáte buď podržaním pravého tlačidla myši a následným stlačením ľavého alebo naopak.",
     "description": "This gesture is performed either by holding the right mouse button and clicking the left or vice versa."
   },
   "extraLabelWheelActive": {
@@ -276,15 +276,15 @@
     "description": "Wheel gesture mouse button"
   },
   "extraLabelWheelUp": {
-    "message": "Kolieskom hore",
+    "message": "Pohyb kolieskom hore",
     "description": "Wheel up"
   },
   "extraLabelWheelDown": {
-    "message": "Kolieskom dole",
+    "message": "Pohyb kolieskom dole",
     "description": "Wheel down"
   },
   "extraDescriptionWheelActive": {
-    "message": "Skrolujte hore alebo dole počas stlačeného kolieska myši pre spustenie gesta.",
+    "message": "Otočte kolieskom myši hore alebo dole počas držania tlačidla myši pre spustenie gesta.",
     "description": "Scroll up or down while holding the wheel gesture trigger button."
   },
   "extraDescriptionWheelMouseButton": {
@@ -296,19 +296,19 @@
     "description": "Information:"
   },
   "blacklistTextInformation": {
-    "message": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>:\/\/<host><path>.",
+    "message": "Pridajte URL adresy, na ktorých bude rozšírenie Gesturefy zakázané. URL adresa musí byť v tvare <scheme>:\/\/<host><path> a pre zástupné znaky môžete použiť hviezdičku (*).",
     "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>:\/\/<host><path>."
   },
   "blacklistPlaceholderURL": {
-    "message": "Enter URL match pattern",
+    "message": "Zadajte vzorovú URL adresu",
     "description": "Enter URL match pattern"
   },
   "blacklistNotificationAlreadyExists": {
-    "message": "URL pattern already exists.",
+    "message": "Vzorová URL adresa existuje.",
     "description": "URL pattern already exists."
   },
   "blacklistHintNoEntries": {
-    "message": "No entries available",
+    "message": "Nie sú dostupné žiadne vstupy",
     "description": "No entries available"
   },
   "aboutBackup": {
@@ -372,7 +372,7 @@
     "description": "New tab"
   },
   "commandLabelReloadTab": {
-    "message": "Obnoviť stránku",
+    "message": "Obnoviť kartu",
     "description": "Reload tab"
   },
   "commandLabelReloadFrame": {
@@ -412,7 +412,7 @@
     "description": "Page forward"
   },
   "commandLabelTogglePin": {
-    "message": "Toggle pinned tab",
+    "message": "Prepnúť pripnutú kartu",
     "description": "Toggle pinned tab"
   },
   "commandLabelToggleMute": {
@@ -436,23 +436,23 @@
     "description": "Scroll page up"
   },
   "commandLabelFocusRightTab": {
-    "message": "Focus right tab",
+    "message": "Prejsť na kartu vľavo",
     "description": "Focus right tab"
   },
   "commandLabelFocusLeftTab": {
-    "message": "Focus left tab",
+    "message": "Prejsť na kartu vpravo",
     "description": "Focus left tab"
   },
   "commandLabelFocusFirstTab": {
-    "message": "Focus first tab",
+    "message": "Prejsť na prvú kartu",
     "description": "Focus first tab"
   },
   "commandLabelFocusLastTab": {
-    "message": "Focus last tab",
+    "message": "Prejsť na poslednú kartu",
     "description": "Focus last tab"
   },
   "commandLabelFocusPreviousSelectedTab": {
-    "message": "Focus previous selected tab",
+    "message": "Prejsť na predchádzajúcu kartu",
     "description": "Focus previous selected tab"
   },
   "commandLabelMaximizeWindow": {
@@ -564,7 +564,7 @@
     "description": "Open custom URL"
   },
   "commandLabelPasteClipboard": {
-    "message": "Paste clipboard",
+    "message": "Prilepiť zo schránky",
     "description": "Paste clipboard"
   },
   "commandLabelOpenURLFromClipboard": {
@@ -628,7 +628,7 @@
     "description": "Send message to other add-on"
   },
   "commandDescriptionToggleBookmark": {
-    "message": "Pridať alebo odobrať záložku.",
+    "message": "Pridá alebo odoberie záložku.",
     "description": "Adds or removes a bookmark."
   },
   "commandDescriptionDuplicateTab": {
@@ -676,7 +676,7 @@
     "description": "Returns to the previous page of the history."
   },
   "commandDescriptionPageForth": {
-    "message": "Goes a page forward in the history.",
+    "message": "Prejsť v histórii o stránku dopredu.",
     "description": "Goes a page forward in the history."
   },
   "commandDescriptionTogglePin": {
@@ -796,11 +796,11 @@
     "description": "Closes all tabs to the right side."
   },
   "commandDescriptionCloseLeftTabs": {
-    "message": "Zatvorí všetky listy na ľavej strane, okrem pripnutej karty.",
+    "message": "Zatvorí všetky karty na ľavej strane, okrem pripnutej karty.",
     "description": "Closes all tabs to the left side, excluding pinned tabs."
   },
   "commandDescriptionCloseOtherTabs": {
-    "message": "Closes all tabs except of the current tab and pinned tabs.",
+    "message": "Zatvorí všetky karty, okrem aktuálnej a pripnutých kariet.",
     "description": "Closes all tabs except of the current tab and pinned tabs."
   },
   "commandDescriptionSaveTabAsPDF": {
@@ -904,11 +904,11 @@
     "description": "default"
   },
   "commandSettingLabelNewTabPositionBefore": {
-    "message": "before",
+    "message": "pred aktuálnou",
     "description": "before"
   },
   "commandSettingLabelNewTabPositionAfter": {
-    "message": "po",
+    "message": "po aktuálnej",
     "description": "after"
   },
   "commandSettingLabelNewTabFocus": {
@@ -924,15 +924,15 @@
     "description": "default"
   },
   "commandSettingLabelTabNextFocusPrevious": {
-    "message": "previous",
+    "message": "predchádzajúce",
     "description": "previous"
   },
   "commandSettingLabelTabNextFocusNext": {
-    "message": "next",
+    "message": "nasledujúce",
     "description": "next"
   },
   "commandSettingLabelTabNextFocusRecently": {
-    "message": "last focused",
+    "message": "naposledy aktívne",
     "description": "last focused"
   },
   "commandSettingLabelTabClosePinned": {
@@ -948,11 +948,11 @@
     "description": "Reload cache"
   },
   "commandSettingLabelZoomStep": {
-    "message": "Zoom step",
+    "message": "Kroky zoomu",
     "description": "Zoom step"
   },
   "commandSettingLabelScrollDuration": {
-    "message": "Scroll duration",
+    "message": "Trvanie točenia kolieskom",
     "description": "Scroll duration"
   },
   "commandSettingLabelFocusIncludePinned": {
@@ -1000,7 +1000,7 @@
     "description": "Determines which tab should be focused next."
   },
   "commandSettingDescriptionTabClosePinned": {
-    "message": "Determines if pinned tabs can be closed or not.",
+    "message": "Určuje či pripnuté karty majú byť zatvorené alebo nie.",
     "description": "Determines if pinned tabs can be closed or not."
   },
   "commandSettingDescriptionRestoreCurrentWindow": {
@@ -1036,7 +1036,7 @@
     "description": "Determines if the \"Save As\" dialog should appear or the file should be downloaded silently to the users default download folder."
   },
   "commandSettingDescriptionCustomURL": {
-    "message": "The URL that should be opened.",
+    "message": "URL adresa, ktorá sa má otvoriť.",
     "description": "The URL that should be opened."
   },
   "commandSettingDescriptionAddonId": {
@@ -1052,7 +1052,7 @@
     "description": "Determines if the message should be serialized as a JavaScript object."
   },
   "commandErrorNotificationTitle": {
-    "message": "\"$COMMAND$\" command failed.",
+    "message": "Príkaz $COMMAND$ zlyhal.",
     "description": "\"New tab\" command failed.",
     "placeholders": {
       "command": {
@@ -1062,7 +1062,7 @@
     }
   },
   "commandErrorNotificationMessageIllegalURL": {
-    "message": "The target URL cannot be opened. Click here for more information.",
+    "message": "Cieľová URL adresa nemohla byť otvorená. Kliknite sem pre viac informácií.",
     "description": "The target URL cannot be opened. Click here for more information."
   },
   "commandErrorNotificationMessageNotSerializeable": {
@@ -1074,7 +1074,7 @@
     "description": "The specified extension ID either does not belong to an existing add-on or the add-on does not receive messages. Click here for more information."
   },
   "commandBarTitle": {
-    "message": "Command bar",
+    "message": "Panel príkazov",
     "description": "Command bar"
   },
   "commandBarSaveButton": {
@@ -1094,7 +1094,7 @@
     "description": "Edit Gesture"
   },
   "gesturePopupRecordingAreaText": {
-    "message": "Use the $MOUSEBUTTON$ mouse button to record a new gesture.",
+    "message": "Ak chcete nahrať nové gesto, použite $MOUSEBUTTON$ tlačidlo myši.",
     "description": "Use the right mouse button to record a new gesture.",
     "placeholders": {
       "mousebutton": {
@@ -1104,15 +1104,15 @@
     }
   },
   "gesturePopupMouseButtonLeft": {
-    "message": "left",
+    "message": "ľavé",
     "description": "This will replace the placeholder in \"Use the $MOUSEBUTTON$ mouse button to record a new gesture.\""
   },
   "gesturePopupMouseButtonRight": {
-    "message": "right",
+    "message": "pravé",
     "description": "This will replace the placeholder in \"Use the $MOUSEBUTTON$ mouse button to record a new gesture.\""
   },
   "gesturePopupMouseButtonMiddle": {
-    "message": "middle",
+    "message": "stredné",
     "description": "This will replace the placeholder in \"Use the $MOUSEBUTTON$ mouse button to record a new gesture.\""
   },
   "gesturePopupLabelCommand": {
@@ -1120,31 +1120,31 @@
     "description": "Command"
   },
   "gesturePopupLabelGestureDirections": {
-    "message": "Gesture directions",
+    "message": "Smery gesta",
     "description": "Gesture directions"
   },
   "gesturePopupLabelOptionalLabel": {
-    "message": "Označenie (voliteľné)",
+    "message": "Názov príkazu (voliteľné)",
     "description": "Label (optional)"
   },
   "gesturePopupDescriptionCommand": {
-    "message": "Choose a command that should be assigned to this gesture.",
+    "message": "Zadajte príkaz, ktorý má byť priradený k tomuto gestu.",
     "description": "Choose a command that should be assigned to this gesture."
   },
   "gesturePopupDescriptionGestureDirections": {
-    "message": "Either use the arrow keys to enter the directions, or record them in the area next to it.",
+    "message": "Zadajte smery pomocou smerových kláves alebo ich môžete nahrať v oblasti vedľa.",
     "description": "Either use the arrow keys to enter the directions, or record them in the area next to it."
   },
   "gesturePopupDescriptionOptionalLabel": {
-    "message": "Assign a custom name that will be displayed instead of the command name.",
+    "message": "Zadajte vlastný názov, ktorý bude zobrazený namiesto názvu príkazu.",
     "description": "Assign a custom name that will be displayed instead of the command name."
   },
   "gesturePopupSaveButton": {
-    "message": "Save",
+    "message": "Uložiť",
     "description": "Save"
   },
   "gesturePopupDirectionsNotificationDuplicate": {
-    "message": "This gesture is already in use by \"$COMMAND$\".",
+    "message": "Toto gesto je už použité pre príkaz: $COMMAND$.",
     "description": "This gesture is already in use by \"$COMMAND$\".",
     "placeholders": {
       "command": {
@@ -1162,11 +1162,11 @@
     "description": "Bookmarks"
   },
   "permissionLabelClipboardWrite": {
-    "message": "Clipboard write",
+    "message": "Zápis do schránky",
     "description": "Clipboard write"
   },
   "permissionLabelClipboardRead": {
-    "message": "Clipboard read",
+    "message": "Čítanie zo schránky",
     "description": "Clipboard read"
   },
   "permissionLabelDownloads": {
@@ -1182,7 +1182,7 @@
     "description": "Off - setting not checked"
   },
   "LinkReadWiki": {
-    "message": "Read wiki for more info.",
+    "message": "Pre viac informácií čítajte wiki.",
     "description": "Read wiki for more info."
   },
   "darkTheme": {
