changed the Search Selected text command to use the default search engine if search engine url is omitted

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1054,8 +1054,8 @@
     "description": "Determines if an empty tab should be opened if no URL or link was selected."
   },
   "commandSettingDescriptionSearchEngineURL": {
-    "message": "The URL to query a search by appending the search text to the end.",
-    "description": "The URL to query a search by appending the search text to the end."
+    "message": "A custom URL to query the search by appending the search text to the end. If omitted, the default browser search engine will be used.",
+    "description": "A custom URL to query the search by appending the search text to the end. If omitted, the default browser search engine will be used."
   },
   "commandSettingDescriptionSavePromptDialog": {
     "message": "Determines if the \"Save As\" dialog should appear or the file should be downloaded silently to the users default download folder.",
