--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -996,6 +996,10 @@
     "message": "Open empty tab",
     "description": "Open empty tab"
   },
+  "commandSettingLabelOpenEmptyWindow": {
+    "message": "Open empty window",
+    "description": "Open empty window"
+  },
   "commandSettingLabelSearchEngineURL": {
     "message": "Search engine URL",
     "description": "Search engine URL"
@@ -1060,6 +1064,10 @@
   "commandSettingDescriptionOpenEmptyTab": {
     "message": "Determines if an empty tab should be opened if no URL or link was selected.",
     "description": "Determines if an empty tab should be opened if no URL or link was selected."
+  },
+  "commandSettingDescriptionOpenEmptyWindow": {
+    "message": "Determines if an empty window should be opened if no URL or link was selected.",
+    "description": "Determines if an empty window should be opened if no URL or link was selected."
   },
   "commandSettingDescriptionSearchEngineURL": {
     "message": "A custom search URL to which the search text is appended. If omitted, the default browser search engine will be used.",
